--- a/WalSmart/app/src/main/res/layout/activity_product_sets.xml
+++ b/WalSmart/app/src/main/res/layout/activity_product_sets.xml
@@ -25,17 +25,31 @@
         android:id="@+id/my_product_sets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/basket_btn_sets"
+        android:layout_above="@id/buttons2"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
-
+<LinearLayout
+    android:id="@+id/buttons2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:layout_centerInParent="true"
+    android:layout_alignParentBottom="true"
+    android:orientation="horizontal">
+    <Button
+        android:id="@+id/create_set"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:layout_margin="@dimen/fab_margin"
+        android:text="Create set"
+        android:textSize="@dimen/btn_text" />
     <Button
         android:id="@+id/basket_btn_sets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/fab_margin"
+          android:layout_margin="@dimen/fab_margin"
         android:text="@string/basket"
         android:textSize="@dimen/btn_text" />
+</LinearLayout>
+
 </RelativeLayout>
