--- a/WalSmart/app/src/main/res/layout/activity_basket.xml
+++ b/WalSmart/app/src/main/res/layout/activity_basket.xml
@@ -6,20 +6,22 @@
     android:layout_height="match_parent"
     android:background="@color/floral_white"
     tools:context=".BasketActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/toolbar_color" >
-    </androidx.appcompat.widget.Toolbar>
+        android:background="@color/toolbar_color" />
+
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/products_btn"
             android:layout_width="wrap_content"
