--- a/WalSmart/app/src/main/res/menu/menu_main.xml
+++ b/WalSmart/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:title="@string/about"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_my_orders"
+        android:orderInCategory="100"
+        android:title="@string/my_orders"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_log_out"
         android:orderInCategory="100"
         android:title="@string/log_out"
