--- a/WalSmart/app/src/main/res/values/colors.xml
+++ b/WalSmart/app/src/main/res/values/colors.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <!-- <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>-->
     <color name="slate_grey">#738290</color>
     <color name="alice_blue">#F1F4F9</color>
     <color name="floral_white">#FFFCF7</color>
     <color name="black_coffee">#2B2B2B</color>
     <color name="apricot">#CDDC39</color>
     <color name="green">#859A6D</color>
-    <color name="toolbar_color">#E1E0BA</color>
+    <color name="toolbar_color">#9EFF6F00</color>
 </resources>
